Dart Sass compatibility fixes for u-container-items-spacing mixin

--- a/utilities/mixins/_u-container-items-spacing.scss
+++ b/utilities/mixins/_u-container-items-spacing.scss
@@ -1,10 +1,10 @@
 @mixin u-container-items-spacing($item, $spacing-x, $spacing-y: null) {
   /* stylelint-disable declaration-block-no-redundant-longhand-properties */
 
-  margin-left: -$spacing-x / 2; 
-  margin-right: -$spacing-x / 2; 
-  margin-top: if($spacing-y, -$spacing-y / 2, null); 
-  margin-bottom: if($spacing-y, -$spacing-y / 2, null); 
+  margin-left: math.div(-$spacing-x, 2); 
+  margin-right: math.div(-$spacing-x, 2); 
+  margin-top: if($spacing-y, math.div(-$spacing-y, 2), null); 
+  margin-bottom: if($spacing-y, math.div(-$spacing-y, 2), null); 
 
   @at-root {
     @if type-of($item) == 'map' {
